--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <div class="titles">
       <h1 class="mainTitle">2023 - 2022 المنتدى الطبي الفلسطيني - الفرع الطلابي</h1>
-      <h2 class="subTitle">اترك رسالتك لخريجي دفعة "الرضوان" واترك ذكرى طيبة لهم</h2>
+      <h2 class="subTitle">اترك رسالتك لخريجي دفعة "ومن أحياها" واترك ذكرى طيبة لهم</h2>
     </div>
 
     <div class="head_img img2">
