--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="titles">
-      <h1 class="mainTitle">2023 - 2022 المنتدى الطبي الفلسطيني - الفرع الطلابي</h1>
+      <h1 class="mainTitle">المنتدى الطبي الفلسطيني - الفرع الطلابي 2022-2023</h1>
       <h2 class="subTitle">اترك رسالتك لخريجي دفعة "ومن أحياها" واترك ذكرى طيبة لهم</h2>
     </div>
 
